Changed the jagex logo from svg to png

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 style="width:75%;">
                 <span id="iam"> I am a</span>
                 <span id="rotatey-text-wrap">
-                    <span class="rotate" id="rotatey-text">Developer, Student, Designer, Musician, President</span>
+                    <span class="rotate" id="rotatey-text">Developer, Student, Designer, Musician</span>
                 </span>
             </h2>
         </div>
@@ -95,17 +95,17 @@
 
 <section class="scrollybar">
     <div style="text-align: center">
-    <ul class="bxslider">
-        <li><img src="img/jagex.svg"/></li>
-        <li><img src="img/majestic.png"/></li>
-        <li><img src="img/uob.png"/></li>
-        <li><img src="img/css.png"/></li>
-        <!-- Put them here twice to make the slider smoother-->
-        <li><img src="img/jagex.svg"/></li>
-        <li><img src="img/majestic.png"/></li>
-        <li><img src="img/uob.png"/></li>
-        <li><img src="img/css.png"/></li>
-    </ul>
+        <ul class="bxslider">
+            <li><img src="img/jagex.png"/></li>
+            <li><img src="img/majestic.png"/></li>
+            <li><img src="img/uob.png"/></li>
+            <li><img src="img/css.png"/></li>
+            <!-- Put them here twice to make the slider smoother-->
+            <li><img src="img/jagex.png"/></li>
+            <li><img src="img/majestic.png"/></li>
+            <li><img src="img/uob.png"/></li>
+            <li><img src="img/css.png"/></li>
+        </ul>
     </div>
     <script>
         $('.bxslider').bxSlider({
@@ -117,7 +117,7 @@
             speed: 14000
         });
     </script>
-        <!--  <img src="img/css.png"/> -->
+    <!--  <img src="img/css.png"/> -->
 </section>
 
 <section id="aboutme">
@@ -132,12 +132,12 @@
                 developer, and student at the University of Birmingham. I am currently studying towards an MSci Computer
                 Science with Industrial Year Degree, and have just completed my first year with a first-class degree.</p>
             <p>I have experience with Python, Java, JavaScript and OCaml, and I especially enjoy working on front-end
-            development with HTML, CSS and JavaScript.</p>
-            <p>As well as this, I'm also a keen musician - Predominantly a pianist and singer, although I have also dabbled
-            in guitar and flute.</p>
+                development with HTML, CSS and JavaScript.</p>
+            <p>As well as this, I'm also a keen musician - predominantly a pianist and singer, although I have also dabbled
+                in guitar and flute.</p>
             <p>I am currently the president of the Computer Science Society (CSS) at the University of Birmingham. As well
-            as this, I am a Silicon Canal ambassador, and I want to see Birmingham's tech scene become tighter-knit and less
-            fragmented.</p>
+                as this, I am a Silicon Canal ambassador, and I want to see Birmingham's tech scene become tighter-knit and less
+                fragmented.</p>
             <p>I'm a big fan of coffee (I'm a developer and a student... what did you expect?) - and if you fancy grabbing a
                 coffee (or similar) in B'ham and chatting about tech etc. please get in touch!
                 <span style="font-size:32px;"><i class="fa fa-quote-right" aria-hidden="true"></i></span></p>
@@ -150,19 +150,19 @@
     <hr>
     <div class="scrollybar">
         <div style="text-align: center">
-         <ul class="bxslider">
-             <li><img src="img/aceofspades.png"/></li>
-             <li><img src="img/festiveometer.png"/></li>
-             <li><img src="img/geodonate.png"/></li>
-             <li><img src="img/tweat.png"/></li>
-             <li><img src="img/runetime.png"/></li>
-             <!-- Put them here twice to make the slider smoother-->
-             <li><img src="img/aceofspades.png"/></li>
-             <li><img src="img/festiveometer.png"/></li>
-             <li><img src="img/geodonate.png"/></li>
-             <li><img src="img/tweat.png"/></li>
-             <li><img src="img/runetime.png"/></li>
-         </ul>
+            <ul class="bxslider">
+                <li><img src="img/aceofspades.png"/></li>
+                <li><img src="img/festiveometer.png"/></li>
+                <li><img src="img/geodonate.png"/></li>
+                <li><img src="img/tweat.png"/></li>
+                <li><img src="img/runetime.png"/></li>
+                <!-- Put them here twice to make the slider smoother-->
+                <li><img src="img/aceofspades.png"/></li>
+                <li><img src="img/festiveometer.png"/></li>
+                <li><img src="img/geodonate.png"/></li>
+                <li><img src="img/tweat.png"/></li>
+                <li><img src="img/runetime.png"/></li>
+            </ul>
         </div>
     </div>
     <script>
