added a skills scrollbar.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             slideWidth: 200,
             slideMargin: 50,
             ticker: true,
-            speed: 14000
+            speed: 20000
         });
     </script>
     <!--  <img src="img/css.png"/> -->
@@ -172,7 +172,43 @@
             slideWidth: 200,
             slideMargin: 50,
             ticker: true,
-            speed: 14000
+            speed: 20000
+        });
+    </script>
+</section>
+
+<section id="skills">
+    <h1 style="padding-top: 20px; padding-left: 20px;">My Skills</h1>
+    <hr>
+    <div class="scrollybar">
+        <div style="text-align: center">
+            <ul class="bxslider" id="skills-scroll">
+                <li><img src="img/js.png"/></li>
+                <li><img src="img/java.png"/></li>
+                <li><img src="img/python.png"/></li>
+                <li><img src="img/ocaml.png"/></li>
+                <li><img src="img/latex.png"/></li>
+                <li><img src="img/csslang.png"/></li>
+                <li><img src="img/html.png"/></li>
+                <!-- Put them here twice to make the slider smoother-->
+                <li><img src="img/js.png"/></li>
+                <li><img src="img/java.png"/></li>
+                <li><img src="img/python.png"/></li>
+                <li><img src="img/ocaml.png"/></li>
+                <li><img src="img/latex.png"/></li>
+                <li><img src="img/csslang.png"/></li>
+                <li><img src="img/html.png"/></li>
+            </ul>
+        </div>
+    </div>
+    <script>
+        $('.bxslider').bxSlider({
+            minSlides: 4,
+            maxSlides: 6,
+            slideWidth: 200,
+            slideMargin: 50,
+            ticker: true,
+            speed: 20000
         });
     </script>
 </section>
