Completely reworked the header.

--- a/index.html
+++ b/index.html
@@ -76,16 +76,17 @@
 </nav>
 
 <header>
-    <div id="header-content-wrap">
-        <div id="rotatey-wrap">
-            <h2 style="width:75%;">
-                <span id="iam"> I am a</span>
-                <span id="rotatey-text-wrap">
-                    <span class="rotate" id="rotatey-text">Developer, Student, Designer, Musician</span>
+    <div id="header-wrap">
+        <h2 style="display: inline-block;">
+            <span id="i-am-wrap">
+                I am a
+            </span>
+            <span id="rotatey-text-wrap">
+                <span id="rotatey-text" class="rotate">
+                    Developer, Student, Designer, Musician
                 </span>
-            </h2>
-        </div>
-        <br><br>
+            </span>
+        </h2>
         <hr>
         <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
