stopped the rotating text from moving (again)

--- a/index.html
+++ b/index.html
@@ -77,20 +77,23 @@
 
 <header>
     <div id="header-wrap">
-        <h2 style="display: inline-block;">
-            <span id="i-am-wrap">
-                I am a
-            </span>
-            <span id="rotatey-text-wrap">
-                <span id="rotatey-text" class="rotate">
-                    Developer, Student, Designer, Musician
+        <div id="rotate-title-wrap">
+            <h2 id="rotate-title">
+                <span id="i-am-wrap">
+                    I am a
                 </span>
-            </span>
-        </h2>
-        <hr>
-        <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <span id="rotatey-text-wrap">
+                    <span id="rotatey-text" class="rotate">
+                        Developer, Student, Designer, Musician
+                    </span>
+                </span>
+            </h2>
+            <br><br>
+            <hr>
+            <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </div>
     </div>
 </header>
 
