--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 Science with Industrial Year Degree, and have just completed my first year with a first-class degree.</p>
             <p>I have experience with Python, Java, JavaScript and OCaml, and I especially enjoy working on front-end
                 development with HTML, CSS and JavaScript.</p>
-            <p> Check out my CV <a href="cv.pdf" style="color:#fff">here</a>!</p>
+            <p> Check out my CV <a href="CV.pdf" style="color:#fff">here</a>!</p>
             <p>As well as this, I'm also a keen musician - predominantly a pianist and singer, although I have also dabbled
                 in guitar and flute.</p>
             <p>Oh, and I game... A lot... Especially League of Legends.</p>
