--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!doctype html>
 <html>
+  
 <head>
+      <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css">
+      <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 </head>
-<body>
+
+  <body>
+            <h1>Tom Goodman</h1>
+            <h2>I sometimes do stuff.</h2>
+            <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 </body>
 </html>
