--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
 <head>
       <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css">
-      <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+      <style>
+        #about a {
+            color: #fff;
+            font-size: 25px;
+            padding: 5px;
+         }
+
+         #about i {
+              transition: all ease 0.3s;
+         }
+
+        #about i:hover {
+             font-size: 50px;
+         }
+      </style>
 </head>
 
   <body>
+      <section id="about">
             <h1>Tom Goodman</h1>
-            <h2>I sometimes do stuff.</h2>
+            <h2>I sometimes do stuff</h2>
             <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
             <a href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      </section>
 </body>
 </html>
