--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css">
       <style>
-        #about {
-            background-image: "img/cityscape.jpeg";
+        body {
+            background-image: "img/cityscape.jpg";
         }
         
         #about a {
