--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css">
       <style>
         body {
-            background-image: "img/cityscape.jpg";
+            background-image: url("img/cityscape.jpg");
         }
         
         #about a {
