--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css">
       <style>
         #about {
-          background-color: #111111;
+          background-color: #dddddd;
         }
         
         #about a {
