--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
       <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css">
       <style>
+        body {
+          padding: 0;
+          margin: 0;
+          height: 100%;
+          width: 100%;
+        }
+        
         #about {
           background-color: #dddddd;
+          height: 100%;
+          width: 100%;
         }
         
         #about a {
