--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
           width: 100%;
         }
         
-        #about {
+        body {
           background-color: #dddddd;
           height: 100%;
           width: 100%;
         }
         
-        #about a {
+        body a {
             color: #fff;
             font-size: 25px;
             padding: 5px;
          }
 
-         #about i {
+         body i {
               transition: all ease 0.3s;
          }
 
-        #about i:hover {
+         body i:hover {
              font-size: 50px;
          }
       </style>
