--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           width: 100%;
           padding: 0px;
           margin: 0px;
+          color: #fff;
         }
         
         body a {
