--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           padding: 0px;
           margin: 0px;
           color: #fff;
+          font-family: Quicksand, sans-serif;
         }
         
         body a {
