--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
          body i:hover {
              font-size: 50px;
          }
+        
+        #about {
+          position: relative;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       </style>
 </head>
 
