--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
          }
         
         #about {
-          position: relative;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
+         text-align: center;
+         width: 40%;
+         position: relative;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%,-50%);
         }
       </style>
 </head>
