--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         
         #about {
          text-align: center;
-         width: 40%;
+         width: 100%;
+         top: 75%;
+         left: 75%;
          position: relative;
          transform: translate(-50%,-50%);
         }
