--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           margin: 0px;
           color: #fff;
           font-family: Quicksand, sans-serif;
+          background-image: url("img/cityscape.jpg");
         }
         
         body a {
