--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           color: #fff;
           font-family: Quicksand, sans-serif;
           background-image: url("img/cityscape.jpg");
+          background-repeat: no-repeat;
         }
         
         body a {
