--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           font-family: Quicksand, sans-serif;
           background-image: url("img/cityscape.jpg");
           background-repeat: no-repeat;
+          background-size:cover
         }
         
         body a {
