--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           background-size:cover
         }
         
+        h1 {
+          font-size: 10vw;
+        }
+        
         body a {
             color: #fff;
             font-size: 25px;
