--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
           margin: 0px;
           color: #fff;
           font-family: Quicksand, sans-serif;
-          background-image: url("img/cityscape.jpg");
-          background-repeat: no-repeat;
-          background-size:cover
+          background: url(img/cityscape.jpg) no-repeat center center fixed; 
+         -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
         }
         
         h1 {
