--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
         body a {
             color: #fff;
-            font-size: 25px;
+            font-size: 1vw;
             padding: 5px;
          }
 
@@ -40,8 +40,7 @@
          }
 
          body i:hover {
-             font-size: 50px;
-         }
+             font-size: 2vw;
         
         #about {
          text-align: center;
