--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           -moz-background-size: cover;
           -o-background-size: cover;
           background-size: cover;
+          text-align: center;
         }
         
         h1 {
