--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
              font-size: 2vw;
         
         #about {
-         text-align: center;
+         text-align: center !important;
          width: 100%;
         }
       </style>
