--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         #about {
          text-align: center !important;
          width: 100%;
+          position: relative;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
       </style>
 </head>
