--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
   <body>
       <section id="about">
             <h1>Tom Goodman</h1>
-        <h2 style=width: 50%>Computer Science <b>student</b>, Developer Evangelist, Serial <b>Hackathon</b> attendee, <b>HackTheMidlands</b> Organiser, Occasional tea drinker</h2>
+            <h2 style="width: 40%">
+            I am a CS student, Developer Evangelist, Hackathon Attendee & Organiser, Occasional Tea Drinker and other stuff
+            </h2>
             <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
             <a href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
