--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
        
         h2 {
           font-size: 2vw;
+          text-align: center;
+          margin: auto;
         }
       
         body a {
