--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        
         h2 {
           font-size: 2vw;
-          text-align: center;
+          text-align: justified;
           margin: auto;
         }
       
