--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
   <body>
       <section id="about">
             <h1>Tom Goodman</h1>
+            <h2 style="color:#696A6F">Student, Developer Evangelist & Hackathon Organiser </h2>
             <h2 style="width: 40%">
-            I am a CS student, Developer Evangelist, Hackathon Attendee & Organiser, Occasional Tea Drinker and other stuff
+              Hi, I'm Tom! 
             </h2>
             <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
