--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 
   <body>
       <section id="about">
-            <h1>Tom Goodman</h1>
-            <h2 style="color:#696A6F">Student, Developer Evangelist & Hackathon Organiser </h2>
+            <h1>Tom Goodman 
+                <span style="color:#696A6F">Student, Developer Evangelist & Hackathon Organiser</span>
+            </h1>
             <h2 style="width: 40%">
               Hi, I'm Tom! 
             </h2>
