--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
   <body>
       <section id="about">
             <h1>Tom Goodman 
-                <span style="color:#696A6F">Student, Developer Evangelist & Hackathon Organiser</span>
+                <br>
+                <span style="color:#696A6F; font-size:2vw">Student, Developer Evangelist & Hackathon Organiser</span>
             </h1>
             <h2 style="width: 40%">
               Hi, I'm Tom! 
