--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span style="color:#696A6F; font-size:2vw">Student, Developer Evangelist & Hackathon Organiser</span>
             </h1>
             <h2 style="width: 40%">
-              Hi, I'm Tom! 
+              Hi, I'm Tom! I'm a student at the University of Birmingham,
             </h2>
             <h2>
               <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
