--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       
         body a {
             color: #fff;
-            font-size: 2vw;
+            font-size: 1vw;
             padding: 5px;
          }
 
@@ -59,7 +59,7 @@
                 <span style="color:#696A6F; font-size:2vw">Student, Developer Evangelist & Hackathon Organiser</span>
             </h1>
             <h2 style="width: 40%">
-              Hi, I'm Tom! I'm a student at the University of Birmingham and a Developer Evangelist. Check <span href="cv.pdf">here</span> for my CV, and click below for everything else!
+              Hi, I'm Tom! I'm a student at the University of Birmingham and a Developer Evangelist. Check <span href="CV.pdf">here</span> for my CV, and click below for everything else!
             </h2>
             <h2>
               <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
