--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           margin: auto;
         }
       
-        body a {
+        .hover-button {
             color: #fff;
             font-size: 1vw;
             padding: 5px;
@@ -59,12 +59,12 @@
                 <span style="color:#696A6F; font-size:2vw">Student, Developer Evangelist & Hackathon Organiser</span>
             </h1>
             <h2 style="width: 40%">
-              Hi, I'm Tom! I'm a student at the University of Birmingham and a Developer Evangelist. Check <span href="CV.pdf">here</span> for my CV, and click below for everything else!
+              Hi, I'm Tom! I'm a student at the University of Birmingham and a Developer Evangelist. Check <a href="CV.pdf">here</a> for my CV, and click below for everything else!
             </h2>
             <h2>
-              <a href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              <a href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <a class="hover-button" href="https://twitter.com/tauomicronmu/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a class="hover-button" href="https://github.com/tauomicronmu"><i class="fa fa-github" aria-hidden="true"></i></a>
+              <a class="hover-button" href="https://uk.linkedin.com/in/tagoodman"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </h2>
       </section>
 </body>
