fixed something also because @gebn told me to :'(

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           margin: 0;
           padding: 0;
           overflow-x: hidden;
+          overflow-y: hidden;
       }
       div.console1 { word-wrap: break-word; }
       div.console1 { font-size: 14px }
