masquerade as bash

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                }
            // evince 
            // error
-               return [{msg:"Command not found.",className:"jquery-console-message-value"}];
+               return [{msg:"bash: " + line + ": command not found",className:"jquery-console-message-value"}];
 
            },
            autofocus:true,
