changed page title: Tom Goodman - @TauOmicronMu => Tom Goodman

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
           "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <title>Tom Goodman - @TauOmicronMu</title>
+    <title>Tom Goodman</title>
     <meta name="Content-Type" content="text/html; charset=UTF-8">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="jquery.console.js"></script>
