--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
            },
            commandHandle:function(line){
            // split the input into command, flags and args
-           var split_line = line.split(split_re);           
-           if(split_line == [""]) return [{msg:"tomsh: command not found",className:"jquery-console-message-value"}];
+           var split_line = line.split(split_re);      
+           console.log(split_line);     
+           if(split_line.length <= 1) return [{msg:"",className:"jquery-console-message-value"}];
  
            // grab the command
            var command_b = false;
