removed 'extended permissions' (misleading dot) @gebn

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             message += access_map[item.owner_a];
                             message += access_map[item.group_a];
                             message += access_map[item.other_a];
-                            message += ". 1 "; // For now, it has 1 link as we don't have symbolic links.
+                            message += " 1 "; // For now, it has 1 link as we don't have symbolic links.
                             message += item.owner + " ";
                             message += item.group + " ";
                             // TODO: Implement filesize and show it here
